# ConsoleDeck

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: build_consoledeck_service_win.yml  build_msi.yml  create_release.yml  release_service.yml
ConsoleDeckService/: ConsoleDeck Service.aip  ConsoleDeckService.csproj  ConsoleDeckService.slnx  ConsoleDeck_Service.aip  Program.cs  Worker.cs  appsettings.Development.json  appsettings.json  consoledeck_service.wxs  transform.xslt  wix.json
ConsoleDeckService/Core/: CONFIGURATION.md  CROSS_PLATFORM.md  LOGGING.md  README_DIAGNOSTICS.md  TROUBLESHOOTING.md  appsettings.example.json
ConsoleDeckService/Core/Interfaces/: IActionExecutor.cs  IAutoStartService.cs  IConfigurationService.cs  IHidDeviceMonitor.cs  INotificationProvider.cs  ISettingsWindowProvider.cs  ISystemTrayProvider.cs
ConsoleDeckService/Core/Models/: ActionDefinition.cs  ActionType.cs  ConsoleDeckConfiguration.cs  KeyActionMapping.cs
ConsoleDeckService/Core/Services/: ActionExecutor.cs  ConfigurationService.cs  (+1 more)
ConsoleDeckService/Properties/: launchSettings.json
Hardware/: CMakeLists.txt
Hardware/.devcontainer/: Dockerfile  devcontainer.json
Hardware/src/: board.c  board.h  enums.h  hid_app.c  hid_app.h  led.c  led.h  main.c  main.h  rotary_encoder.c  rotary_encoder.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
Software/: Action.cs  CloseButton.cs  ConsoleDeck.csproj  DeckButton.cs  DeckRotary.cs  Extensions.cs  MainForm.Designer.cs  MainForm.cs  ProcessingUnit.cs  Program.cs  Software.sln  actions.yml
(+18 files in other folders)
